<resources>
    <string name="app_name">MyAutoApplication</string>
    <string name="title_activity_second">SecondActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="to_second_activity">ToSecondActivity</string>

    <string name="play_source">Play</string>
    <string name="pause_source">Pause</string>
    <string name="stop_source">Stop</string>
    <string name="first_video">can not up!!!</string>
    <string name="last_video">can not down!!!</string>
    <string name="stop">stop</string>
    <string name="up">up</string>
    <string name="start">start</string>
    <string name="down">down</string>
    <string name="todo">TODO</string>
    <string name="play_error_info">Can not play!!!</string>
    <string name="no_permission">请到设置中打开APP相关权限</string>
    <string name="textview">TextView</string>
</resources>