<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".media.SecondFragment">
    <FrameLayout
        android:id="@+id/video_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <VideoView
            android:id="@+id/second_fragment_video_video_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/up"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:text="@string/start"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:text="@string/stop"

                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/down"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/big_video_view"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginTop="116dp"
            android:layout_marginEnd="4dp"
            android:clickable="true"
            android:src="@android:drawable/gallery_thumb"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>