<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/butPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="51dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/play_source"
                android:textSize="30sp" />

            <Button
                android:id="@+id/butStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="51dp"
                android:text="@string/stop_source"
                android:textSize="30sp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/butToActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="51dp"
                android:text="@string/to_second_activity"
                android:textSize="30sp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/infoView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="51dp"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.205"
            tools:ignore="MissingConstraints" />

        <ListView
            android:id="@+id/audioList"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoView"
            app:layout_constraintTop_toTopOf="@+id/infoView"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

</FrameLayout>